The content of cicd.yaml has been modified. Two new files, vote_ingress.yaml and result_ingress.yaml, have been added.

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,18 +1,32 @@
----
-- name: Configure AWS Credentials
-  uses: aws-actions/configure-aws-credentials@v1
-  with:
-    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    aws-region: eu-west-3
+name: CI/CD Pipeline
 
-- name: Install eksctl
-  run: |
-    curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
-    sudo mv /tmp/eksctl /usr/local/bin
+on:
+  push:
+    branches:
+      - main  # Change this to whatever branch you want to trigger the action
 
-- name: Update Kubeconfig
-  run: eksctl utils write-kubeconfig --cluster romain-voting-app-cluster --region eu-west-3
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-- name: Apply Kubernetes Manifests
-  run: kubectl apply -f K8s/
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-3
+
+      - name: Install eksctl
+        run: |
+          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+          sudo mv /tmp/eksctl /usr/local/bin
+
+      - name: Update Kubeconfig
+        run: eksctl utils write-kubeconfig --cluster romain-voting-app-cluster --region eu-west-3
+
+      - name: Apply Kubernetes Manifests
+        run: kubectl apply -f K8s/
