--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -26,7 +26,7 @@ jobs:
           sudo mv /tmp/eksctl /usr/local/bin
 
       - name: Update Kubeconfig
-        run: eksctl utils write-kubeconfig --cluster romain-voting-app-cluster --region eu-west-3
+        run: eksctl utils write-kubeconfig --cluster ironhack-main --region eu-west-2
 
       - name: Apply Kubernetes Manifests
         run: kubectl apply -f K8s/
