Once more, another line in cicd.yaml has been modified.

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+#name: CI/CD Pipeline
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
           sudo mv /tmp/eksctl /usr/local/bin
 
       - name: Update Kubeconfig
-        run: eksctl utils write-kubeconfig --cluster ironhack-main --region eu-west-2
+        run: eksctl utils write-kubeconfig --cluster ironhack-main --region eu-east-2
 
       - name: Apply Kubernetes Manifests
         run: kubectl apply -f K8s/
