--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -30,4 +30,4 @@ jobs:
         run: aws eks update-kubeconfig --name ironhack-main --region us-east-2
 
       - name: Apply Kubernetes Manifests
-        run: kubectl apply -f K8s/
+        run: kubectl apply -f k8s/
