--- a/ingress.yaml
+++ b/ingress.yaml
@@ -4,10 +4,10 @@ metadata:
   name: my-ingress
 spec:
   rules:
-    - host: vote.app.po-lin.diogohack.shop
+    - host: app.po-lin.diogohack.shop
       http:
         paths:
-          - path: /vote
+          - path: /
             pathType: Prefix
             backend:
               service:
