--- a/k8s/result-service.yaml
+++ b/k8s/result-service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: po-lin-result
+  name: po-lin-result-service
+  namespace: demo-po-lin
 spec:
   selector:
     app: po-lin-result
   ports:
-    - port: 8081
-      targetPort: 8081
+    - port: 80
+      targetPort: 80
       protocol: TCP
   type: ClusterIP
