adding namespace to ingress

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: voting-app-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
+  namespace: demo-po-lin
 spec:
   ingressClassName: "nginx"
   rules:
